Name:                Cashlog
Version:             0.1
Synopsis:            SWEv3 Projekt
License:             GPL-2
License-file:        LICENSE
Author:              Daniel Priebe
Maintainer:          priebe@stud.fh-sm.de
Category:            Misc
Build-type:          Simple
Cabal-version:       >=1.2
Description:         SWEv3 Projekt

Executable cashlog
  hs-source-dirs:    src
  Main-is:           Cashlog/Main.hs
  Build-depends:     base >= 4.3.1.0,
                     haskeline >= 0.6.4.0,
                     HDBC >= 2.2.7.0,
                     HDBC-sqlite3 >= 2.3.1.0,
                     convertible, old-locale, time

  ghc-options: -O2 -Wall -fhpc -fwarn-tabs -funbox-strict-fields -threaded
               -fno-warn-unused-do-bind
